# Simple-Chat

./: CMakeLists.txt  buffer.c  buffer.h  list.c  list.h
client/: client.h  main.c
server/: client.c  client.h  main.c
